[project]
name = "invest-haa"
version = "0.1.0"
description = "HAA dry-run planner for Toss Securities OpenAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.9",
]

[project.scripts]
haa = "invest_haa.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest_haa"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
